# InkwellAPI

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.json  docker-compose.yml  rustfmt.toml  sqlx-data.json
.github/workflows/: audit.yml  rust-deploy.yml
config/: base.json  local.json  production.json
migrations/: 20230619181253_create_users_table.sql
scripts/: init_db.sh
scripts/docker_startup/: create_user_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: display_name.rs  email.rs  mod.rs  user.rs
src/domain/requests/: mod.rs  sign_up.rs
src/routes/: health_check.rs  mod.rs  sign_up.rs
tests/: g.rs  health_check.rs  sign_up.rs
