[package]
name = "inkwell-api"
version = "0.1.0"
authors = ["Calcopod"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "inkwell-api"

[dependencies]

actix-web = "4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
#[target.x86_64-pc-windows-gnu]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]

config = "0.13.3"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]

reqwest = { version = "0.11.18", features = ["json"] }