[package]
name = "inkwell-api"
version = "0.1.0"
authors = ["Calcopod"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "inkwell-api"

[dependencies]

actix-web = "4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

log = "0.4.19"
env_logger = "0.10.0"

tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }

tracing-bunyan-formatter = "0.3.7"

config = "0.13.3"

uuid = { version = "1.3.4", features = ["v4"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]

reqwest = { version = "0.11.18", features = ["json"] }