[package]
name = "inkwell-api"
version = "0.1.0"
authors = ["Calcopod"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "inkwell-api"

# On Windows
# ```
# cargo install -f cargo-binutils
# rustup
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang`
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]

actix-web = "4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

log = "0.4.19"

tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.5"

secrecy = { version = "0.8.0", features = ["serde"] }

tracing-bunyan-formatter = "0.3.7"

config = "0.13.3"

uuid = { version = "1.3.4", features = ["v4"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }

once_cell = "1.18.0"

serde-aux = "4.2.0"

unicode-segmentation = "1.10.1"

regex = "1.8.4"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]

reqwest = { version = "0.11.18", features = ["json"] }